fix: add center alignment for timestamp text

--- a/style.css
+++ b/style.css
@@ -599,6 +599,7 @@ input:focus {
 }
 
 .registration-trial-lesson-card-timestamp {
+    align-self: center;
     color: var(--dark-text, #252525);
     font-family: "Raleway";
     font-size: 18px;
